[package]
name = "tesira-text-protocol"
description = "Implementation of Tesira Text Protocol to communicate with biamp Tesira devices"
author = "Baptiste Saclier <baptiste@plan-valley.com>"
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
nom = "8.0"
thiserror = "2.0"
ssh2 = { version = "0.9.5", optional = true}

[dev-dependencies]
pretty_assertions = "1.4.1"

[features]
default = ["ssh"]
ssh = ["dep:ssh2"]