[package]
name = "tesira-text-protocol"
description = "Implementation of Tesira Text Protocol to communicate with biamp Tesira devices"
authors = ["Baptiste Saclier <baptiste@plan-valley.com>"]
license = "MIT"
version = "0.2.0"
edition = "2024"

[dependencies]
nom = "8.0"
thiserror = "2.0"
ssh2 = { version = "0.9", optional = true }
chrono = "0.4"

[dev-dependencies]
pretty_assertions = "1.4.1"

[build-dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
codegen = "0.2"

[features]
default = ["ssh"]
ssh = ["dep:ssh2"]
